--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <nav class="row">
       <div class="nav-wrapper">
-        <span class="brand-logo center">{{ title }}</span>
+        <span class="brand-logo center">{{ config?.title | uppercase }}</span>
       </div>
     </nav>
   
@@ -15,14 +15,18 @@
         class="col s8"
         type="text"
         placeholder="Dodaj zadanie i datę wykonania"
+        #nameInput
       />
       <input class="col s2 disabled" type="date" />
-      <button class="btn-floating">+</button>
+      <button class="btn-floating" (click)="createTask(nameInput.value)">+</button>
     </div>
   
     <ul class="collection">
       <li class="collection-item row" *ngFor="let task of tasks; let i = index">
-        <span class="col s10">{{i + 1 }}. {{ task.name }} - {{ task.deadline }}</span>
+        <span class="col s10">
+          {{ i + 1 }}. {{ task.name }} -
+          {{ task.deadline | date: 'd.MM EEEE':'':'pl' }}
+        </span>
         <div class="col s2 right-align">
           <button class="btn-floating btn-small red">
             <i class="material-icons">remove</i>
@@ -44,7 +48,7 @@
     <footer class="page-footer mt-5">
       <div class="footer-copyright">
         <div class="container">
-          {{ getFooter() }}
+          {{ config?.date | date: 'yyyy' }} {{ config?.footer }}
         </div>
       </div>
     </footer>
