--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,8 +17,13 @@
         placeholder="Dodaj zadanie i datę wykonania"
         #nameInput
       />
-      <input class="col s2 disabled" type="date" />
-      <button class="btn-floating" (click)="createTask(nameInput.value)">+</button>
+      <input class="col s2 disabled" type="date" #dateInput/>
+      <button class="btn-floating" 
+        (click)=
+            "createTask(nameInput.value, dateInput.value); 
+            nameInput.value='';
+            dateInput.value=''"
+            >+</button>
     </div>
   
     <ul class="collection">
